# deb-packaging-tools

./: .gitignore  .pre-commit-config.yaml  README.md  ng-deb-tools_0.1.0_all.deb  test-amd64-pkg.deb  test-arm64-pkg.deb  test-riscv64-pkg.deb
apt-server/: setup-apt-server.bash
ng-deb-tools_0.1.0_all/DEBIAN/: control  postinst
ng-deb-tools_0.1.0_all/debian/: control
ng-sbuild/: build-and-package.bash  create-schroots.bash  generate-debian-files.bash  package-ros-deb.bash  sbuild-sourcebinary.bash
ngtools/: pyproject.toml
ngtools/debian/: changelog  rules
ngtools/scripts/: ngtools-build-source-deb.py
ngtools/src/ngtools/: __init__.py
ngtools/src/ngtools_dpkg/: __init__.py  build_package_binary.py  build_package_source.py  common.py  config_package.py
pkg-from-src/DEBIAN/: control
sbuild/: build-and-package.bash  create-schroot.bash  create-schroots.bash  generate-debian-changelog.bash  generate-debian-files.bash  hello-world-cpp_0.1.0-20250325.041433.dsc  hello-world-cpp_0.1.0-20250325.041830.dsc  init-debian-changelog.bash  package.bash  sbuild-sourcebinary.bash  sourcedeb.bash
sbuild/hello_world_cpp/: CMakeLists.txt
sbuild/hello_world_cpp_ros/: CMakeLists.txt
test-riscv64-pkg/DEBIAN/: preinst
test_pkgs/: hello-world-cpp_0.0.1.orig.tar.xz  ros-rolling-demo-nodes-cpp_0.35.1-0noble_amd64.build  ros-rolling-demo-nodes-cpp_0.35.1-0noble_source.build
test_pkgs/hello_world_cpp_ros/: package.xml
test_pkgs/ngtools/: pyproject.toml
test_pkgs/ngtools/debian/: control  install  postinst
test_pkgs/ngtools/ngtools-dpkg/: build-source-deb.py
(+22 files in other folders)
