[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ngtools"
version = "0.0.1"
authors = [
  { name="Nathanael Gandhi", email="nat11public@gmail.com" },
]
description = "A collection of useful python scripts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "requests"
]
dynamic = ["version"]

[project.scripts]
ngtools-dpkg-source = "ngtools-dpkg.build-source-deb:main"

[project.urls]
Homepage = "https://github.com/NathanaelGandhi"